# mac-mouse-paste

./: Cargo.toml  README.md
scripts/: build_app.sh  install.sh  uninstall.sh
src/: engine.rs  main.rs
