[package]
name = "mac-mouse-paste"
version = "0.1.0"
edition = "2024"

[dependencies]
core-graphics = "0.25.0"
core-foundation = "0.10.1"
libc = "0.2"
foreign-types-shared = "0.3"

# menu bar UI (Rust-only)
objc = "0.2.7"
cocoa = "0.26.1"

[lints.rust]
unexpected_cfgs = "allow"
deprecated = "allow"
